--- a/Package_Install.ipynb
+++ b/Package_Install.ipynb
@@ -1,168 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7f1be6d9-9790-4f3a-a791-165315451899",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting yfinance\n",
-      "  Downloading yfinance-0.2.41-py2.py3-none-any.whl (73 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m73.5/73.5 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting html5lib>=1.1\n",
-      "  Downloading html5lib-1.1-py2.py3-none-any.whl (112 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.2/112.2 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting frozendict>=2.3.4\n",
-      "  Downloading frozendict-2.4.4-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (103 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.7/103.7 kB\u001b[0m \u001b[31m30.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting multitasking>=0.0.7\n",
-      "  Downloading multitasking-0.0.11-py3-none-any.whl (8.5 kB)\n",
-      "Collecting beautifulsoup4>=4.11.1\n",
-      "  Downloading beautifulsoup4-4.12.3-py3-none-any.whl (147 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m147.9/147.9 kB\u001b[0m \u001b[31m28.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting lxml>=4.9.1\n",
-      "  Downloading lxml-5.2.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.9 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m50.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting pandas>=1.3.0\n",
-      "  Downloading pandas-1.3.5-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.3/11.3 MB\u001b[0m \u001b[31m44.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting requests>=2.31\n",
-      "  Downloading requests-2.31.0-py3-none-any.whl (62 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.6/62.6 kB\u001b[0m \u001b[31m18.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting peewee>=3.16.2\n",
-      "  Downloading peewee-3.17.6.tar.gz (3.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m108.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting platformdirs>=2.0.0\n",
-      "  Downloading platformdirs-4.0.0-py3-none-any.whl (17 kB)\n",
-      "Collecting pytz>=2022.5\n",
-      "  Downloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m505.5/505.5 kB\u001b[0m \u001b[31m71.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.16.5 in ./custom-miniconda/miniconda/envs/4nrnd-wveu/lib/python3.7/site-packages (from yfinance) (1.21.6)\n",
-      "Collecting soupsieve>1.2\n",
-      "  Downloading soupsieve-2.4.1-py3-none-any.whl (36 kB)\n",
-      "Collecting webencodings\n",
-      "  Downloading webencodings-0.5.1-py2.py3-none-any.whl (11 kB)\n",
-      "Requirement already satisfied: six>=1.9 in ./custom-miniconda/miniconda/envs/4nrnd-wveu/lib/python3.7/site-packages (from html5lib>=1.1->yfinance) (1.16.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in ./custom-miniconda/miniconda/envs/4nrnd-wveu/lib/python3.7/site-packages (from pandas>=1.3.0->yfinance) (2.9.0.post0)\n",
-      "Collecting typing-extensions>=4.7.1\n",
-      "  Downloading typing_extensions-4.7.1-py3-none-any.whl (33 kB)\n",
-      "Collecting certifi>=2017.4.17\n",
-      "  Downloading certifi-2024.7.4-py3-none-any.whl (162 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m163.0/163.0 kB\u001b[0m \u001b[31m35.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting idna<4,>=2.5\n",
-      "  Downloading idna-3.7-py3-none-any.whl (66 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.8/66.8 kB\u001b[0m \u001b[31m20.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting charset-normalizer<4,>=2\n",
-      "  Downloading charset_normalizer-3.3.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (136 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m136.8/136.8 kB\u001b[0m \u001b[31m37.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: urllib3<3,>=1.21.1 in ./custom-miniconda/miniconda/envs/4nrnd-wveu/lib/python3.7/site-packages (from requests>=2.31->yfinance) (1.26.19)\n",
-      "Building wheels for collected packages: peewee\n",
-      "  Building wheel for peewee (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for peewee: filename=peewee-3.17.6-py3-none-any.whl size=138888 sha256=c52653385308f1a6dbf0208a89831ef2a3d43ed173c44b76d06d655ea8dc03fe\n",
-      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/12/56/4d/e4422b18d363b7e6b3c258662a21382a839f02306fb4b92ffc\n",
-      "Successfully built peewee\n",
-      "Installing collected packages: webencodings, pytz, peewee, multitasking, typing-extensions, soupsieve, lxml, idna, html5lib, frozendict, charset-normalizer, certifi, requests, platformdirs, pandas, beautifulsoup4, yfinance\n",
-      "Successfully installed beautifulsoup4-4.12.3 certifi-2024.7.4 charset-normalizer-3.3.2 frozendict-2.4.4 html5lib-1.1 idna-3.7 lxml-5.2.2 multitasking-0.0.11 pandas-1.3.5 peewee-3.17.6 platformdirs-4.0.0 pytz-2024.1 requests-2.31.0 soupsieve-2.4.1 typing-extensions-4.7.1 webencodings-0.5.1 yfinance-0.2.41\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install yfinance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "cf0a64b7-143b-49b6-bf45-989bf61553b0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting package metadata: done\n",
-      "Solving environment: done\n",
-      "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /home/ec2-user/SageMaker/custom-miniconda/miniconda/envs/4nrnd-wveu\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - ta-lib\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    libta-lib-0.4.0            |       h166bdaf_1         517 KB  conda-forge\n",
-      "    ta-lib-0.4.19              |   py37hda87dfa_4         377 KB  conda-forge\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         894 KB\n",
-      "\n",
-      "The following NEW packages will be INSTALLED:\n",
-      "\n",
-      "  libta-lib          conda-forge/linux-64::libta-lib-0.4.0-h166bdaf_1\n",
-      "  ta-lib             conda-forge/linux-64::ta-lib-0.4.19-py37hda87dfa_4\n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "libta-lib-0.4.0      | 517 KB    | ##################################### | 100% \n",
-      "ta-lib-0.4.19        | 377 KB    | ##################################### | 100% \n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n",
-      "\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "conda install -c conda-forge ta-lib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "60bff961-dce0-4e96-8715-44aa69f0f440",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Done\n"
-     ]
-    }
-   ],
-   "source": [
-    "import yfinance\n",
-    "import talib\n",
-    "print('Test Done')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca07d794-b222-49c8-bafe-d9e6356bd35a",
+   "cell_type": "markdown",
+   "id": "575a20f4-fb25-48e9-9b38-f30e87f0981b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "persistent-conda-ebs:\n",
+    "https://github.com/aws-samples/amazon-sagemaker-notebook-instance-lifecycle-config-samples/tree/master/scripts/persistent-conda-ebs\n",
+    "\n",
+    "SageMaker Notebook Instance 수명 주기 구성 생성을 위 스크립트로 설정을 하고 인스턴스 실행 후 pip install로 패키지 설치시 하면 \n",
+    "/home/ec2-user/SageMaker/custom-miniconda/miniconda/envs/INSTANCE_NAME/lib/python3.7/site-packages\n",
+    "에 패키지가 영구 설치 됨."
+   ]
   }
  ],
  "metadata": {
