--- a/CMD.ipynb
+++ b/CMD.ipynb
@@ -7,7 +7,23 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving notices: ...working... done\n",
+      "Channels:\n",
+      " - conda-forge\n",
+      " - nvidia\n",
+      " - pytorch\n",
+      " - ranaroussi\n",
+      "Platform: linux-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: | "
+     ]
+    }
+   ],
    "source": [
     "conda install --yes -c conda-forge pandas"
    ]
